# myZerepy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent-example copy 2.json  agent-example copy 3.json  agent-example copy.json  agent-example.json  brain_script.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  serve.py  stuff.py  test_llm.py  test_server.py
agents/: auto-example.json  example.json  general.json  langgraph-example.json  legacy-example.json  starter.json
docs/architecture/: components.md  events.md  overview.md  plugins.md
docs/guides/: configuration.md  plugin_development.md
src/: action_handler.py  agent.py  agent_factory.py  cli.py  connection_manager.py  event_bus.py  langgraph_agent.py  legacy_agent.py  message_bus.py  migration_script.py  swarm_manager.py  zerepy_service.py
src/actions/: __init__.py  agentipy_actions.py  echochamber_actions.py  eternalai_actions.py  ethereum_actions.py  evm_actions.py  monad_actions.py  solana_actions.py  sonic_actions.py  twitter_actions.py
src/agent/: agent_config.py  agent_controller.py  agent_module.py  agent_service.py
src/config/: __init__.py  base_config.py  composite.py  providers.py  settings.py  validation.py  zerepy_config.py
src/config/agent_config/: __init__.py  tasks.py
src/config/types/: __init__.py
src/connections/: __init__.py  agentipy_connection.py  allora_connection.py  anthropic_connection.py  base_connection.py  brain_connection.py  discord_connection.py  echochambers_connection.py  eternalai_connection.py  ethereum_connection.py  evm_connection.py  farcaster_connection.py  galadriel_connection.py  goat_connection.py  groq_connection.py  hyperbolic_connection.py  monad_connection.py  ollama_connection.py  openai_connection.py  perplexity_connection.py  solana_connection.py  sonic_connection.py  together_connection.py  twitter_connection.py  xai_connection.py
src/connections/allora/: __init__.py  service.py
src/connections/discord/: __init__.py  gateway.py  service.py
src/connections/farcaster/: __init__.py  service.py
src/connections/goat/: __init__.py  service.py
src/connections/solana/: __init__.py  (+1 more)
src/constants/: __init__.py  brain_prompts.py
src/controllers/: zerepy_controller.py
src/events/: __init__.py  bus.py  decorators.py  handlers.py
src/helpers/: brain_helper.py
src/langgraph/: graph_agent.py  langgraph_agent.py  prompts.py
src/lib/: __init__.py  base_config.py  base_connection.py
src/llm_models/: __init__.py
src/plugins/: __init__.py  base.py  discovery.py  exceptions.py  registry.py
src/resources/: __init__.py  cleanup.py  lifecycle.py  manager.py  pool.py
src/schemas/: brain_schemas.py
src/server/: README.md  app.py
src/solana/: solana_config.py  solana_module.py  solana_service.py
src/twitter/: service.py
src/types/: __init__.py  agent.py  config.py  connections.py
src/utils/: deep_dict.py
temp/: agent.py  connections.py  example.json
tests/: conftest.py
tests/integration/: test_plugin_system.py
(+73 files in other folders)
